# herd-common

./: CMakeLists.txt
action/install-openfhe/: action.yml
include/herd/common/: dag.hpp  native_type_mapping.hpp  uuid.hpp
include/herd/common/model/: column_descriptor.hpp  column_meta.hpp  data_type.hpp  exception.hpp  execution_plan.hpp
include/herd/common/model/circuit/: circuit.hpp  nodes.hpp  operation.hpp
include/herd/common/model/executor/: execution_plan.hpp  stage.hpp
include/herd/common/model/worker/: crypto_key_ptr.hpp  data_frame_ptr.hpp  task.hpp
include/herd_common/: column_descriptor.hpp  column_type.hpp  data_type.hpp  job.hpp  schema_type.hpp  uuid.hpp
nix/libpaseto/: default.nix
nix/openfhe/: default.nix
src/: native_type_mapping.cpp  uuid.cpp
